--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,38 @@
-.my-btn {
-    margin: 2px;
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+ul li {
+    margin: 0px;
+}
+
+ul li label {
+    border: 1px solid #ddd;
+    background-color: #f6f6f6;
+    padding: 12px;
+    font-size: 18px;
+    color: black;
+    display: block
+}
+
+ul li label:hover {
+    border: 1px solid #ddd;
+    background-color: #BEBEBE;
+    padding: 12px;
+    font-size: 18px;
+    color: black;
+    display: block
+}
+
+.label-text {
+    padding-left: 10px;
+}
+
+.my-input {
+    font-size: 20px;
+    border: 1px solid #ddd;
+    margin-bottom: 12px;
+    width: 100%;
 }
