--- a/templates/sidebar.handlebars
+++ b/templates/sidebar.handlebars
@@ -1,17 +1,19 @@
-<div class="row">
-    <div class="col-md-8">
-        <div class="sidebar-content" id="list-group">
-            Conten of the tab goes here!
+<div class="side-bar">
+    <div class="side-bar-favorites">
+        <p>Side bar favorites div</p>
+    </div>
+    <div class="side-bar-bottom">
+        <div class="side-bar-content">
+            <p>Side bar CONTENT div</p>
+        </div>
+        <div class="side-bar-menu">
+            <ul class="nav nav-pills nav-stacked">
+                <li><a href="#!/home/:topten"> Top ten</a></li>
+                <li><a href="#!/home/:bottomten">Bottom ten</a></li>
+                <li><a href="#!/home/:news">News feed</a></li>
+                <li><a href="#!/home/:feed">Facegroup page feed</a></li>
+            </ul>
         </div>
     </div>
-    <div class="tabs col-md-4">
-        <ul class="nav nav-pills nav-stacked">
-            <li><a href="#!/home/:favorites">Favorites</a></li>
-            <li><a href="#!/home/:topten"> Top ten</a></li>
-            <li><a href="#!/home/:bottomten">Bottom ten</a></li>
-            <li><a href="#!/home/:news">News feed</a></li>
-            <li><a href="#!/home/:feed">Facegroup page feed</a></li>
-        </ul>
-    </div>
-    <div class="clearfix visible-lg"></div>
 </div>
+    
