--- a/old/sidebarOld.handlebars
+++ b/old/sidebarOld.handlebars
@@ -1,3 +1,9 @@
+<div class="favorites">
+    {{#each favorites}}
+        {{this}}
+    {{/each}}
+</div>
+{{!--
 <div class="side-bar">
     <div class="side-bar-favorites">
         <p>Side bar favorites div</p>
@@ -15,5 +21,4 @@
             </ul>
         </div>
     </div>
-</div>
-    
+</div>--}}
