--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,7 @@
-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-ul li {
-    margin: 0px;
-}
-
-ul li label {
-    border: 1px solid #ddd;
-    background-color: #f6f6f6;
-    padding: 12px;
-    font-size: 18px;
-    color: black;
-    display: block
-}
-
-ul li label:hover {
-    border: 1px solid #ddd;
-    background-color: #BEBEBE;
-    padding: 12px;
-    font-size: 18px;
-    color: black;
-    display: block
-}
-
-.label-text {
-    padding-left: 10px;
-}
-
-.my-input {
-    font-size: 20px;
-    border: 1px solid #ddd;
-    margin-bottom: 12px;
-    width: 100%;
-}
-
-#main {
-    padding: 20px;
-    width: 70%;
-    float: left;
-}
-
-
 /*START Right side bar*/
 
-#right-sidebar {
-    padding: 20px;
-    width: 30%;
-    float: right;
-}
-
-.side-bar-favorites {
-    border: 2px, black;
-    float: top;
-    widows: 30%;
-}
-
-.side-bar-bottom {
-    float: bottom;
-    width: 70%;
-}
-
-.side-bar-content {
-    float: left;
-    width: 70%;
-}
-
-.side-bar-menu {
-    float: right;
-    width: 30%;
+.form-control {
+    height: 200px !important;
 }
 
 
