--- a/templates/sidebar-favorites.handlebars
+++ b/templates/sidebar-favorites.handlebars
@@ -1,6 +1,15 @@
 <div class="favorites">
-    Here are all favorites
-    {{!--{{#each favorites}}
-        {{this}}
-    {{/each}}--}}
+    <div class="tab-title">
+        <h2>Favorites</h2>
+    </div>
+    <form>
+        <div class="radio">
+            <select multiple class="form-control">
+                {{#each this}} 
+                <option>{{this.name}}</option>
+                {{/each}}
+            </select>
+        </div>
+    </form>
 </div>
+
