--- a/public/templates/sidebar-favorites.handlebars
+++ b/public/templates/sidebar-favorites.handlebars
@@ -3,13 +3,15 @@
         <h2>Favorites</h2>
     </div>
     <form>
+        {{#each this}} 
         <div class="radio">
-            <select multiple class="form-control">
-                {{#each this}} 
-                <option>{{this.name}}</option>
-                {{/each}}
-            </select>
+            <label>
+            <input type="radio" name="optradio">
+                {{this.name}}
+            </label>    
         </div>
+            {{/each}}
     </form>
 </div>
+
 
