Existing user login implemented (#4), toastr added

--- a/public/templates/login.handlebars
+++ b/public/templates/login.handlebars
@@ -5,13 +5,13 @@
         <div class="col-md-offset-4 col-md-4">
             <div class="form-login">
                 <h4>Welcome back.</h4>
-                <input type="text" id="userName" class="form-control input-sm chat-input" placeholder="username" />
+                <input type="text" id="input-username" class="form-control input-sm chat-input" placeholder="username" />
                 </br>
-                <input type="text" id="userPassword" class="form-control input-sm chat-input" placeholder="password" />
+                <input type="password" id="input-password" class="form-control input-sm chat-input" placeholder="password" />
                 </br>
                 <div class="wrapper">
                     <span class="group-btn">     
-                        <a href="#" class="btn btn-primary btn-md">login <i class="fa fa-sign-in"></i></a>
+                        <a href="/#!auth" class="btn btn-primary btn-md">login <i class="fa fa-sign-in"></i></a>
                     </span>
                 </div>
                 </br>
