--- a/public/templates/register.handlebars
+++ b/public/templates/register.handlebars
@@ -1,5 +1,3 @@
-{{!--<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">--}}
-
 <div class="container" id="login-form">
     <div class="row">
         <div class="col-md-offset-4 col-md-4">
@@ -7,15 +5,16 @@
                 <h2 class="panel-heading">Welcome back.</h2>
                 <input type="email" id="input-email" class="form-control chat-input" placeholder="email" />
                 </br>
+                <input type="text" id="input-displayname" class="form-control chat-input" placeholder="display name - TODO" />
+                </br>
                 <input type="password" id="input-password" class="form-control chat-input" placeholder="password" />
                 </br>
                 <div class="wrapper">
                     <span class="group-btn">     
-                        <a href="/#!login" class="btn btn-primary btn-md">login <span class="fa glyphicon glyphicon-log-in"></span></a>
+                        <a href="/#!register" class="btn btn-primary btn-md">register <span class="fa glyphicon glyphicon-log-in"></span></a>
                     </span>
                 </div>
                 </br>
-                <p>New user? <a href="/#!create">Create an account</a></p>
             </div>
         
         </div>
