Login/Register animated popup

--- a/public/templates/login.handlebars
+++ b/public/templates/login.handlebars
@@ -1,9 +1,7 @@
-{{!--<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">--}}
-
-<div class="container" id="login-form">
-    <div class="row">
-        <div class="col-md-offset-4 col-md-4">
+<div class="container modal" id="login-form">
+    <div class="modal-content">
             <div class="form-login">
+            <span class="close">&times;</span>
                 <h2 class="panel-heading">Welcome back.</h2>
                 <input type="email" id="input-email" class="form-control chat-input" placeholder="email" />
                 </br>
@@ -16,8 +14,6 @@
                 </div>
                 </br>
                 <p>New user? <a href="/#!create">Create an account</a></p>
-            </div>
-        
-        </div>
+            </div>        
     </div>
 </div>
