--- a/public/templates/register.handlebars
+++ b/public/templates/register.handlebars
@@ -1,8 +1,8 @@
-<div class="container" id="login-form">
-    <div class="row">
-        <div class="col-md-offset-4 col-md-4">
+<div class="container modal" id="login-form">
+    <div class="modal-content">
             <div class="form-login">
-                <h2 class="panel-heading">Welcome back.</h2>
+            <span class="close">&times;</span>
+                <h2 class="panel-heading">Hello stranger.</h2>
                 <input type="email" id="input-email" class="form-control chat-input" placeholder="email" />
                 </br>
                 <input type="text" id="input-displayname" class="form-control chat-input" placeholder="display name - TODO" />
