--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,19 +64,85 @@ favorites .active {
 /*END Right side bar*/
 
 
-/*START Login form */
+/* The Modal (background) */
 
-#login-form {
-    background-color: #fff;
-    -webkit-font-smoothing: antialiased;
-    font: normal 14px Roboto, arial, sans-serif;
-    margin-top: 100px;
-}
-
-#login-form .container {
-    padding: 25px;
+.modal {
+    display: block;
     position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
 }
+
+
+/* Modal Content */
+
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: 20% auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 40%;
+    height: 20%;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.6s
+}
+
+
+/* Add Animation */
+
+@-webkit-keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+    to {
+        top: 0;
+        opacity: 1
+    }
+}
+
+@keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+    to {
+        top: 0;
+        opacity: 1
+    }
+}
+
+
+/* The Close Button */
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+/*START Login form */
 
 #login-form .form-login {
     background-color: #EDEDED;
@@ -84,7 +150,7 @@ favorites .active {
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
-    border-radius: 15px;
+    border-radius: 10px;
     border-color: #d2d2d2;
     border-width: 5px;
     box-shadow: 0 1px 0 #cfcfcf;
