--- a/public/templates/login.handlebars
+++ b/public/templates/login.handlebars
@@ -1,19 +1,17 @@
 <div class="container modal" id="login-form">
-    <div class="modal-content">
-            <div class="form-login">
-            <span class="close">&times;</span>
-                <h2 class="panel-heading">Welcome back.</h2>
-                <input type="email" id="input-email" class="form-control chat-input" placeholder="email" />
-                </br>
-                <input type="password" id="input-password" class="form-control chat-input" placeholder="password" />
-                </br>
-                <div class="wrapper">
-                    <span class="group-btn">     
-                        <a href="/#!login" class="btn btn-primary btn-md">login <span class="fa glyphicon glyphicon-log-in"></span></a>
-                    </span>
-                </div>
-                </br>
-                <p>New user? <a href="/#!create">Create an account</a></p>
-            </div>        
-    </div>
+    <div class="modal-content col-xs-12 col-sm-6 col-sm-offset-3 col-lg-3 col-lg-offset-4">
+        <span class="close">&times;</span>
+        <h2 class="panel-heading">Welcome back.</h2>
+        <input type="email" id="input-email" class="form-control chat-input" placeholder="email" />
+        </br>
+        <input type="password" id="input-password" class="form-control chat-input" placeholder="password" />
+        </br>
+        <div class="wrapper">
+            <span class="group-btn">     
+                <a href="/#!login" class="btn btn-primary btn-md">login <span class="fa glyphicon glyphicon-log-in"></span></a>
+            </span>
+        </div>
+        </br>
+        <p class="wrapper">New user? <a href="/#!create">Create an account</a></p>
+    </div>        
 </div>
