--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+#contents img {
+    width: 100%;
+}
+
 #sidebar-wrapper {
     position: fixed;
     width: 100%;
@@ -7,6 +11,10 @@
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+}
+
+.class-xs-12 li {
+    display: inline-block;
 }
 
 .sidebar-nav {
