--- a/public/templates/sidebar-favorites.handlebars
+++ b/public/templates/sidebar-favorites.handlebars
@@ -2,16 +2,22 @@
     <div class="tab-title">
         <h2>Favorites</h2>
     </div>
-    <form>
-        {{#each this}} 
-        <div class="radio">
-            <label>
-            <input type="radio" name="optradio">
-                {{this.name}}
-            </label>    
-        </div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Index</th>
+                <th>Price</th>
+                <th>F Score</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{#each this}}
+            <tr>
+                <td>{{this.name}}</td>
+                <td>{{this.price}}</td>
+                <td>{{this.volume}}</td>
+            </tr>
             {{/each}}
-    </form>
+        </tbody>
+    </table>
 </div>
-
-
