--- a/public/templates/sidebar-search.handlebars
+++ b/public/templates/sidebar-search.handlebars
@@ -1,4 +1,18 @@
- <div class="jumbotron"> 
+
+{{!--<div class="row col-xs-2">
+    <input type="text" class="input-sm my-input" id="filter-input">
+    <ul id="currency-cont">
+        {{#each name}}
+            <li>
+                <label for="{{@index}}">
+                    <input type="checkbox" id="{{@index}}"><span class="label-text">{{this}}</span></label>
+            </li>
+        {{/each}}
+    </ul>
+</div>--}}
+ 
+
+  <div class="jumbotron"> 
     <div class="container-fluid">
         <div class="row col-xs-4">
             <input type="text" class="input-lg my-input" id="filter-input">
