Update visual style, minor tweaks

--- a/public/templates/sidebar-search.handlebars
+++ b/public/templates/sidebar-search.handlebars
@@ -1,18 +1,18 @@
 
-{{!--<div class="row col-xs-2">
+<div class="row">
     <input type="text" class="input-sm my-input" id="filter-input">
-    <ul id="currency-cont">
+    <ul class="list-group" id="currency-cont"> 
         {{#each name}}
-            <li>
+            <li class="list-group-item col-xs-5">
                 <label for="{{@index}}">
                     <input type="checkbox" id="{{@index}}"><span class="label-text">{{this}}</span></label>
             </li>
         {{/each}}
     </ul>
-</div>--}}
+</div>
  
 
-  <div class="jumbotron"> 
+  {{!--<div class="jumbotron"> 
     <div class="container-fluid">
         <div class="row col-xs-4">
             <input type="text" class="input-lg my-input" id="filter-input">
@@ -26,4 +26,4 @@
             </ul>
         </div>
     </div>
- </div>
+ </div>--}}
