Sidebar tweaks, Change laptops commit

--- a/public/templates/sidebar-favorites.handlebars
+++ b/public/templates/sidebar-favorites.handlebars
@@ -13,11 +13,12 @@
         <tbody id="favorites-list-table">
             {{#each this}}
             <tr class="favorite-ticket-row">
-                <td class="td">{{this.name}}</td>
-                <td class="td">{{this.price}}</td>
-                <td class="td">{{this.volume}}</td>
+                <td class="td name-favorite">{{this.name}}</td>
+                <td class="td price-favorite">{{this.price}}</td>
+                <td class="td fscore-favorite">{{this.volume}}</td>
             </tr>
             {{/each}}
         </tbody>
     </table>
 </div>
+
