--- a/public/templates/sidebar-favorites.handlebars
+++ b/public/templates/sidebar-favorites.handlebars
@@ -10,15 +10,14 @@
                 <th>F Score</th>
             </tr>
         </thead>
-        <tbody id="favorites-list-table">
+        <tbody id="favorites-list-table tickets-list-table">
             {{#each this}}
-            <tr class="favorite-ticket-row">
-                <td class="td name-favorite">{{this.name}}</td>
-                <td class="td price-favorite">{{this.price}}</td>
-                <td class="td fscore-favorite">{{this.volume}}</td>
+            <tr class="ticket-row">
+                <td class="td ticket-name">{{this.name}}</td>
+                <td class="td ticket-price">{{this.price}}</td>
+                <td class="td ticket-fscore">{{this.fScore}}</td>
             </tr>
             {{/each}}
         </tbody>
     </table>
 </div>
-
