Tables - select element now works as expexted

--- a/public/templates/sidebar-bottom-ten.handlebars
+++ b/public/templates/sidebar-bottom-ten.handlebars
@@ -10,7 +10,7 @@
                 <th>F Score</th>
             </tr>
         </thead>
-        <tbody id="tickets-list-table">
+        <tbody class="tickets-list-table">
             {{#each this}}
             <tr class="ticket-row">
                 <td class="td ticket-name">{{this.name}}</td>
