--- a/public/templates/sidebar-favorites.handlebars
+++ b/public/templates/sidebar-favorites.handlebars
@@ -10,7 +10,7 @@
                 <th>F Score</th>
             </tr>
         </thead>
-        <tbody id="favorites-list-table tickets-list-table">
+        <tbody class="favorites-list-table tickets-list-table">
             {{#each this}}
             <tr class="ticket-row">
                 <td class="td ticket-name">{{this.name}}</td>
