Loading symbols and companies to database

--- a/public/templates/user.handlebars
+++ b/public/templates/user.handlebars
@@ -1,2 +1,12 @@
 
         <h3>Hello username!</h3>
+
+        <button id="get-favs">Get favorites</button>
+
+        <div id="favs">Favs</div>
+
+
+        <button id="load-companies">Load companies</button>
+        
+        <button id="load-symbols">Load symbols</button>
+        
