--- a/public/templates/chart.handlebars
+++ b/public/templates/chart.handlebars
@@ -3,7 +3,9 @@
         <form class="form-inline">
             <div class="form-group">
                 <label class="sr-only" for="ticker">Ticker</label>
-                <input type="text" class="form-control" id="ticker" placeholder="Ticker" maxlength="15">
+                <div id="prefetch">
+                    <input type="text" class="form-control typeahead" id="ticker" placeholder="Ticker" maxlength="15">
+                </div>
             </div>
             <div class="form-group">
                 <label class="sr-only" for="period">Period of time</label>
