Added working search.

--- a/public/templates/sidebar-search.handlebars
+++ b/public/templates/sidebar-search.handlebars
@@ -1,4 +1,11 @@
+<div class="form-group">
+    <label class="sr-only" for="company-search">Search for a company and click on it!</label>
+    <div id="prefetch">
+        <input type="text" class="form-control typeahead companySearch" id="company-search" placeholder="Search.." maxlength="50">
+    </div>
+</div>
 
+{{!-- template for currencies
 <div class="row">
     <input type="text" class="input-sm my-input" id="filter-input">
     <ul class="list-group" id="currency-cont"> 
@@ -10,7 +17,7 @@
         {{/each}}
     </ul>
 </div>
- 
+--}}
 
   {{!--<div class="jumbotron"> 
     <div class="container-fluid">
