--- a/public/css/typeahead.css
+++ b/public/css/typeahead.css
@@ -54,3 +54,7 @@
      -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
           box-shadow: 0 5px 10px rgba(0,0,0,.2);
 }
+
+.companySearch {
+  width: 160%;
+}
