Fix getFavorites to return array, fix library references

--- a/public/templates/user.handlebars
+++ b/public/templates/user.handlebars
@@ -10,3 +10,7 @@
         
         <button id="load-symbols">Load symbols</button>
         
+
+        <tbody class="favorites-list-table tickets-list-table" id="favTab">
+            
+        </tbody>
