Trying to make watchFavorites work

--- a/public/templates/user.handlebars
+++ b/public/templates/user.handlebars
@@ -5,11 +5,10 @@
 
         <div id="favs">Favs</div>
 
-
-        <button id="load-companies">Load companies</button>
-        
+        <!-- Leave these buttons if we want to load companies to DB in bulk
+        <button id="load-companies">Load companies</button>        
         <button id="load-symbols">Load symbols</button>
-        
+        -->
 
         <tbody class="favorites-list-table tickets-list-table" id="favTab">
             
