--- a/public/templates/user.handlebars
+++ b/public/templates/user.handlebars
@@ -1,15 +1,78 @@
+<h3>
+    Hello username!</h3>
 
-        <h3>Hello username!</h3>
+<button id="get-favs">Get favorites</button>
 
-        <button id="get-favs">Get favorites</button>
+<div id="favs">Favs</div>
 
-        <div id="favs">Favs</div>
-
-        <!-- Leave these buttons if we want to load companies to DB in bulk
+<!-- Leave these buttons if we want to load companies to DB in bulk
         <button id="load-companies">Load companies</button>        
         <button id="load-symbols">Load symbols</button>
         -->
 
-        <tbody class="favorites-list-table tickets-list-table" id="favTab">
-            
-        </tbody>
+
+<br/>
+<div class="container">
+    <form class="form-horizontal">
+        <fieldset>
+
+            <!-- Form Name -->
+            <legend>My Profile -> Account setting</legend>
+
+            <!-- Text input-->
+
+
+            <!-- Text input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="textinput">Change Name</label>
+                <div class="col-md-4">
+                    <input id="textinput" name="textinput" type="text" placeholder="{{displayName}}" class="form-control input-md">
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="email">Change Email ID</label>
+                <div class="col-md-4">
+                    <input id="email" name="email" type="email" placeholder="{{email}}" class="form-control input-md">
+                </div>
+            </div>
+
+            <!-- Password input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="passwordinput">new password</label>
+                <div class="col-md-4">
+                    <input id="passwordinput" name="passwordinput" type="password" placeholder="new password" class="form-control input-md">
+
+                </div>
+            </div>
+
+            <!-- Password input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="passwordinput">repeat password</label>
+                <div class="col-md-4">
+                    <input id="passwordinput" name="passwordinput" type="password" placeholder="repeat password" class="form-control input-md">
+
+                </div>
+            </div>
+
+            <!-- Button -->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="singlebutton">Delete my account</label>
+                <div class="col-md-4">
+                    <button id="singlebutton" name="singlebutton" class="btn btn-danger">Delete</button>
+                </div>
+            </div>
+
+
+            <!-- Button -->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="savebutton"></label>
+                <div class="col-md-4">
+                    <button id="savebutton" name="savebutton" class="btn btn-success">Save - not implemented</button>
+                </div>
+
+
+        </fieldset>
+    </form>
+
+    </div>
