--- a/public/templates/login.handlebars
+++ b/public/templates/login.handlebars
@@ -8,7 +8,7 @@
         </br>
         <div class="wrapper">
             <span class="group-btn">     
-                <a href="/#!login" class="btn btn-primary btn-md">login <span class="fa glyphicon glyphicon-log-in"></span></a>
+                <a id="login" class="btn btn-primary btn-md">login <span class="fa glyphicon glyphicon-log-in"></span></a>
             </span>
         </div>
         </br>
