Adde user photo (no change), fixes to user links

--- a/public/templates/account-menu.handlebars
+++ b/public/templates/account-menu.handlebars
@@ -2,10 +2,10 @@
     <div class="navbar-content">
         <div class="row">
             <div class="col-md-5">
-                <img src="http://placehold.it/120x120"
-                    alt="Alternate Text" class="img-responsive" />
+                <img src="../images/slack_47017.png"
+                    alt="User img" class="img-responsive" />
                 <p class="text-center small">
-                    <a href="#">Change Photo</a></p>
+                    <a href="#">..</a></p>
             </div>
             <div class="col-md-7">
                 <span>{{displayName}}</span>
