--- a/public/templates/user.handlebars
+++ b/public/templates/user.handlebars
@@ -20,7 +20,12 @@
             <legend>My Profile -> Account setting</legend>
 
             <!-- Text input-->
-
+            <div class="form-group">
+                <label class="col-sm-4 control-label" for="nameinput">Pretty</label>
+                <div class="col-sm-4">
+                    <img src="../images/slack_47017.png" alt="User image">
+                </div>
+            </div>
 
             <!-- Text input-->
             <div class="form-group">
