--- a/public/templates/login.handlebars
+++ b/public/templates/login.handlebars
@@ -12,6 +12,6 @@
             </span>
         </div>
         </br>
-        <p class="wrapper">New user? <a href="/#!create">Create an account</a></p>
+        <p class="wrapper">New user? <a id="register">Create an account</a></p>
     </div>        
 </div>
