Home and Readme.md updated

--- a/public/templates/home.handlebars
+++ b/public/templates/home.handlebars
@@ -1,1 +1,24 @@
-    <h1>Description</h1>
+<div class="container  col-md-6">
+  <div class="jumbotron">
+    <h1>Stock analysis</h1> 
+    <p>Team Feilong Single Page Application</p>
+    <p>Visitors and users can search and display stock indexes trends for a certain period of days or months.</p>
+    <p>Users can register and save favourite stocks in a list.</p>
+    <p>The side bar also provides a top 10 and bottom 10 listing.
+</p> 
+  </div>
+<h3>A single-page application for analyzing stock trade data.</p>
+<p>The application is module based and object-oriented. It consists of 5 views:</p>
+
+</div>
+            <div class="row">
+
+              <div class="container offset-md3 col-md-6"><ul>
+                  <li>Home page</li>
+                  <li>Chart page</li>
+                  <li>Table page</li>
+                  <li>Side bar</li>
+                  <li>User page</li>
+                  </ul>
+              </div>
+            </div>
